# com.icy3d.logger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: tools.cmake
inc/cppfs/: cppfs-version.h  cppfs_api.h
install/include/com.icy3d.logger/: Log.h
lib/: cppfs.lib  cppfsd.lib
lib/cppfs/: cppfs.lib  cppfsd.lib
src/: CMakeLists.txt  Formatter.cpp  Formatter.h  IcyLog.cpp  IcyLog.h  Log.cpp  Log.h  Log4netFormatter.cpp  Log4netFormatter.h
test/: CMakeLists.txt  CMakeLists.txt.in
test/logger_test/: CMakeLists.txt  LogTest.cpp
